--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,18 +69,29 @@
   </context-param>
   
   
-  <!-- 세션유지시간 설정2 : web.xml에서는 분단위로 지정한다. -->
+  	<!-- 세션유지시간 설정2 : web.xml에서는 분단위로 지정한다. -->
 	<session-config>
 		<session-timeout>35</session-timeout>
 	</session-config>
 	
-	
-	
-	
-	
-	
-	
-	
+	<!-- 
+	한글깨짐에 대한 필터설정 : 현재 개발중인 웹 애플리케이션 전체에
+		해당 필터를 적용한다. 웹 애플리케이션으로 들어오는 모든
+		요청에 대해 문자 인코딩을 UTF-8로 하겠다는 필터 설정이다.
+	 -->
+	<filter>
+		<filter-name>SetCharEncoding</filter-name>
+		<filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+			<init-param>
+				<param-name>encoding</param-name>
+		      	<param-value>utf-8</param-value>
+		    </init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>SetCharEncoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	
 </web-app>
 
